--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                     <h3 class="home__education">Python Full Stack Developer & Data Scientist</h3>
 
                     <div class="home__button">
-                        <a download="" href="{{url_for('static',filename='css/styles.css')}} pdf/RahulPalResume (1).pdf" class="button button--ghost">
+                        <a download="" href="{{url_for('static',filename='pdf/Rahul Pal Resume.pdf')}}" class="button button--ghost">
                             Download CV
                         </a>
 
@@ -690,7 +690,7 @@
                             <h3 class="contact__card-title">Linkdin</h3>
                             <span class="contact__card-data">Rahul Pal</span>
 
-                            <a href="www.linkedin.com/in/rahul-pal-rjit" target="_blank" class="contact__button">
+                            <a href="https://www.linkedin.com/in/rahul-pal-rjit" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
                         </div>
@@ -764,7 +764,7 @@
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="www.linkedin.com/in/rahul-pal-rjit" target="_blank" class="footer__social-link">
+                    <a href="https://www.linkedin.com/in/rahul-pal-rjit" target="_blank" class="footer__social-link">
                         <i class='bx bxl-linkedin footer__social-icon'></i>
                     </a>
                 </li>
